[gd_scene load_steps=2 format=3 uid="uid://ba6iewcjstl0x"]

[ext_resource type="Script" path="res://Menus/Principal/Principal.gd" id="1_ah00s"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ah00s")

[node name="ButtonCreditos" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Creditos"

[node name="ButtonJuego" type="Button" parent="."]
offset_left = 2.0
offset_top = 83.0
offset_right = 75.0
offset_bottom = 114.0
text = "Juego"

[connection signal="mouse_entered" from="ButtonCreditos" to="." method="_on_button_creditos_mouse_entered"]
[connection signal="mouse_exited" from="ButtonCreditos" to="." method="_on_button_creditos_mouse_exited"]
[connection signal="pressed" from="ButtonCreditos" to="." method="_on_button_creditos_pressed"]
[connection signal="pressed" from="ButtonJuego" to="." method="_on_button_juego_pressed"]
